[gd_scene load_steps=2 format=3 uid="uid://btcq37gbypbiv"]

[ext_resource type="Script" path="res://src/http.gd" id="1_la67j"]

[node name="Node" type="Node"]
script = ExtResource("1_la67j")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Title" type="Node2D" parent="."]
position = Vector2(1592, 16)

[node name="Title1" type="Label" parent="Title"]
offset_left = -8.0
offset_right = 134.0
offset_bottom = 24.0
text = "Toby's Playground
"

[node name="Title2" type="Label" parent="Title"]
offset_left = 45.0
offset_top = 23.0
offset_right = 133.0
offset_bottom = 46.0
text = "Godot 4.2.2"

[node name="RequestZone" type="Node2D" parent="."]
position = Vector2(592, 64)

[node name="FillButtonsZone" type="Node2D" parent="RequestZone"]
position = Vector2(-144, -40)

[node name="GitHubButton" type="Button" parent="RequestZone/FillButtonsZone"]
visible = false
offset_right = 72.0
offset_bottom = 32.0
text = "GitHub"
metadata/_edit_use_anchors_ = true

[node name="ApiGetButton" type="Button" parent="RequestZone/FillButtonsZone"]
visible = false
offset_left = 80.0
offset_right = 152.0
offset_bottom = 32.0
text = "API GET"
metadata/_edit_use_anchors_ = true

[node name="ApiGetUpsertButton" type="Button" parent="RequestZone/FillButtonsZone"]
visible = false
offset_left = 160.0
offset_right = 232.0
offset_bottom = 32.0
text = "API GET UPSERT"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="RequestZone/FillButtonsZone"]
visible = false
offset_right = 8.0
offset_bottom = 8.0

[node name="Input" type="TextEdit" parent="RequestZone"]
visible = false
offset_left = -144.0
offset_right = 640.0
offset_bottom = 88.0
theme_override_colors/background_color = Color(0.226707, 0.226707, 0.226707, 1)
wrap_mode = 1

[node name="SendButton" type="Button" parent="RequestZone"]
visible = false
offset_left = 648.0
offset_right = 832.0
offset_bottom = 88.0
text = "Send"

[node name="SendButton2" type="Button" parent="RequestZone"]
offset_left = -43.0
offset_top = -25.0
offset_right = 798.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 50
text = "store shock history"

[node name="Loading" type="Label" parent="RequestZone"]
visible = false
offset_left = 576.0
offset_top = -32.0
offset_right = 634.0
offset_bottom = -9.0
theme_override_colors/font_color = Color(1.44392e-07, 0.701049, 1.54018e-06, 1)
text = "loading"

[node name="ResponseZone" type="Node2D" parent="."]
position = Vector2(64, 200)

[node name="Title" type="Label" parent="ResponseZone"]
offset_top = -8.0
offset_right = 75.0
offset_bottom = 15.0
text = "Response"

[node name="ResponseResult" type="Node2D" parent="ResponseZone"]
position = Vector2(0, 32)

[node name="Title" type="Label" parent="ResponseZone/ResponseResult"]
offset_right = 64.0
offset_bottom = 23.0
text = "Godot result code"

[node name="ColorRect" type="ColorRect" parent="ResponseZone/ResponseResult"]
offset_top = 24.0
offset_right = 832.0
offset_bottom = 88.0
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="Result" type="RichTextLabel" parent="ResponseZone/ResponseResult"]
offset_left = 16.0
offset_top = 40.0
offset_right = 816.0
offset_bottom = 72.0
focus_mode = 2
theme_override_colors/selection_color = Color(0.819608, 0.309804, 0.392157, 1)
selection_enabled = true

[node name="ResponseCode" type="Node2D" parent="ResponseZone"]
position = Vector2(0, 128)

[node name="Title" type="Label" parent="ResponseZone/ResponseCode"]
offset_right = 64.0
offset_bottom = 23.0
text = "HTTP Code"

[node name="ColorRect" type="ColorRect" parent="ResponseZone/ResponseCode"]
offset_top = 24.0
offset_right = 832.0
offset_bottom = 88.0
color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="Code" type="RichTextLabel" parent="ResponseZone/ResponseCode"]
offset_left = 16.0
offset_top = 40.0
offset_right = 816.0
offset_bottom = 72.0
focus_mode = 2
theme_override_colors/selection_color = Color(0.819159, 0.310494, 0.39282, 1)
selection_enabled = true

[node name="ResponseHeaders" type="Node2D" parent="ResponseZone"]
position = Vector2(0, 224)

[node name="Title" type="Label" parent="ResponseZone/ResponseHeaders"]
offset_right = 65.0
offset_bottom = 23.0
text = "Headers"

[node name="ColorRect" type="ColorRect" parent="ResponseZone/ResponseHeaders"]
offset_top = 24.0
offset_right = 832.0
offset_bottom = 520.0
color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="Headers" type="RichTextLabel" parent="ResponseZone/ResponseHeaders"]
offset_left = 16.0
offset_top = 40.0
offset_right = 816.0
offset_bottom = 504.0
focus_mode = 2
theme_override_colors/selection_color = Color(0.819608, 0.309804, 0.392157, 1)
selection_enabled = true

[node name="ResponseBody" type="Node2D" parent="ResponseZone"]
position = Vector2(856, 32)

[node name="Title" type="Label" parent="ResponseZone/ResponseBody"]
offset_right = 40.0
offset_bottom = 23.0
text = "Body"

[node name="ColorRect" type="ColorRect" parent="ResponseZone/ResponseBody"]
offset_top = 24.0
offset_right = 832.0
offset_bottom = 712.0
color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="Body" type="RichTextLabel" parent="ResponseZone/ResponseBody"]
offset_left = 16.0
offset_top = 40.0
offset_right = 816.0
offset_bottom = 696.0
focus_mode = 2
theme_override_colors/selection_color = Color(0.819608, 0.309804, 0.392157, 1)
selection_enabled = true

[connection signal="pressed" from="RequestZone/FillButtonsZone/GitHubButton" to="." method="_on_git_hub_button_pressed"]
[connection signal="pressed" from="RequestZone/FillButtonsZone/ApiGetButton" to="." method="_on_api_get_button_pressed"]
[connection signal="pressed" from="RequestZone/FillButtonsZone/ApiGetUpsertButton" to="." method="_on_api_get_upsert_pressed"]
[connection signal="pressed" from="RequestZone/FillButtonsZone/Button" to="." method="_on_shock_button_pressed"]
[connection signal="pressed" from="RequestZone/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="RequestZone/SendButton2" to="." method="_on_send_button_pressed"]
